@startuml
class Work {
    ID  ID
    Name string
    Project string
    FlowID  ID
    CreateTime time.Time

    StateName string
    State State
}

Work ..> WorkFlow :reference
Work *--> PropertyAssign
PropertyAssign ..> PropertyDefinition
WorkFlow ..> PropertyDefinition
WorkFlow *--> StateMachine
Work *--> WorkProcessStep

class WorkProcessStep {
    WorkID ID
    FlowID ID
    StateName string
    StateCategory StateCategory

    BeginTime time.Time
    EndTime time.Time
}

class WorkFlow {
    ID ID
    Name string

    PropertyDefinitions []PropertyDefinition
    StateMachine        state.StateMachine
}

class PropertyDefinition {
    Name string
}

class PropertyAssign {
    Definition PropertyDefinition
    Value string
}

class WorkManager {
}

WorkManager --> Work
@enduml